# vio

./: .gitignore  Dockerfile  Dockerfile.bak  README.md  commands.md  fast_dataset.sh  jrun.sh  run.sh  sensor_debug.py
outdated/: test1.launch.py  test_rb_1.urdf.xacro
ros2_ws/src/py_pubsub/: package.xml  setup.py
src/vio/: CMakeLists.txt  package.xml
src/vio/config/: gz_bridge.yaml  ros_gz_bridge.yaml
src/vio/launch/: all_in_one.launch.py  camera_view.launch.py  circle_flight.launch.py  fast_dataset_collection.launch.py  gazebo.launch.py  gazebo_headless.launch.py  just_launch.launch.py  robot_state_publisher.launch.py  rsp.launch.py  rviz.launch.py  spawn_entity.launch.py  test1.launch.py  vio_dataset_collection.launch.py  world.launch.py
src/vio/rviz/: robot_visualization.rviz
src/vio/scripts/: circle_flight_controller.py  dataset_recorder.py  imu_monitor.py  pattern_commander.py  pattern_flight_controller.py
src/vio/urdf/: _drone_gazebo.xacro  gazebo.xacro  materials.xacro  quadcopter.urdf.xacro  test_rb_1.urdf.xacro
src/vio/urdf/sensors/: camera_sensor.xacro  imu_sensor.xacro
src/vio/urdf/systems/: drone_systems.xacro
src/vio/worlds/: forest1.sdf
